<resources>
    <string name="app_name">Group4.01</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="video_title">Video Title</string>
    <string name="vollansicht">Vollansicht</string>
    <string name="search">Search</string>
    <string name="s">S</string>
    <string name="categories">Categories</string>
    <string name="movies">Movies</string>
    <string name="serials">Serials</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="Username" >Username</string>
    <string name="Password" >Password</string>
    <string name="Login" >Login</string>
    <string name="Reset_Password">Reset Password? </string>
    <string name="Registration" >Registration</string>
    <string name="Help" >Help</string>
    <string name="Name" >Name</string>
    <string name="Surename" >Surename</string>
    <string name="Birthday" > Birthday</string>
    <string name="Email" >Email</string>
    <string name="berat_show">Berat Show</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">Next</string>
    <string name="please_choose_you_interests">Please choose you Interests</string>
    <string name="watch_now">Watch Now</string>
    <string name="serie">SERIE</string>
    <string name="nachrichten_information">NACHRICHTEN/INFORMATION</string>
    <string name="dokumentation_reportage">DOKUMENTATION/REPORTAGE</string>
    <string name="film">FILM</string>
    <string name="show_magazine">SHOW/MAGAZINE</string>
    <string name="put_in_you_email">Put in you Email!</string>
    <string name="send_new_password">Send new Password!</string>
    <string name="go_to_menu">Go to Menu</string>
</resources>