<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:screenOrientation="portrait"
    android:layout_height="match_parent">
    <!-- made by Berat Sahintürk-->

    <LinearLayout
        android:layout_width="307dp"
        android:layout_height="208dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/login_window"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Start_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login" />

        <Button
            android:id="@+id/Start_Registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registration" />

        <Button
            android:id="@+id/Start_Help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Help" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>