<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- made by Berat Sahintürk-->
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="508dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_window"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:textColor="#000000"
            android:textColorHint="#515151"
            android:textColorLink="#000000" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:textColor="#000000"
            android:textColorHint="#515151"
            android:textColorLink="#000000" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/Login_System"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:text="@string/Login" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/Reset"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:text="@string/Reset_Password"
            android:textColor="#FEFEFE" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>