<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="306dp"
        android:background="@drawable/login_window"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415">

        <EditText
            android:id="@+id/send_password"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/put_in_you_email"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:textColor="#000000"
            android:textColorHint="#515151"
            android:textColorLink="#000000" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/Reset_password2"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/send_new_password" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/go_menu"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:text="@string/go_to_menu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>